--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <div class="label label_white">возможности</div>  
             <div class="title title_white">ВЫБОР - ОТЛИЧНАЯ ШТУКА!</div>
             <div class="subtitle subtitle_white">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
-            <img src="/src/img/car.png" alt="" class="car_img">
+            <img src="img/car.png" alt="" class="car_img">
             <div class="car_descr">Машины на каждый день.<br>
                 Лучше, быстрее и дешевле, чем такси</div>
         </div>
